--- a/fire-detection-ui/src/app/globals.css
+++ b/fire-detection-ui/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+/* 기본 테마 설정 */
 body {
+  @apply bg-white text-black transition-colors duration-500 ease-in-out;
+}
+
+/* 다크모드일 때 설정 */
+.dark body {
   @apply bg-zinc-900 text-white;
 }
